@@ -155,14 +155,16 @@ plotpltp: $(STDOBJ) $(PLTOBJ) $(OBJDIR)/plotpltp.o
 
 $(SRCDIR)/code_version.f90: code_version    #code_version is PHONY and always out-of-date
 	@echo 'Generating '$(SRCDIR)'/code_version.f90'
-	@echo '!code_version.f90:  source file automatically generated by Makefile to report the code version used.' > $(SRCDIR)/code_version.f90
-	@echo 'subroutine print_code_version' >> $(SRCDIR)/code_version.f90
-#@echo '   use basic' >> $(SRCDIR)/code_version.f90
+	@echo '!> \file code_version.f90  Source file automatically generated by Makefile to report the code version used.' > $(SRCDIR)/code_version.f90
+	@echo 'subroutine print_code_version(unit)' >> $(SRCDIR)/code_version.f90
 	@echo '   implicit none' >> $(SRCDIR)/code_version.f90
+	@echo '   integer, intent(in) :: unit' >> $(SRCDIR)/code_version.f90
 	@echo "   character :: svn_revision*99 = '"`svnversion`"'" >> $(SRCDIR)/code_version.f90
 	@echo "   character :: compile_date*99 = '"`date`"'" >> $(SRCDIR)/code_version.f90
 	@echo "   character :: compiler*99 = '$(FORT)'" >> $(SRCDIR)/code_version.f90
-	@echo "   write(6,'(A)')'svn revision: '//trim(svn_revision)//', compiled on '//trim(compile_date)//' with '//trim(compiler)//'.'" >> $(SRCDIR)/code_version.f90
+	@echo "   character :: compiler_flags*99 = '$(OPT)'" >> $(SRCDIR)/code_version.f90
+	@echo "   write(unit,'(A)')'svn revision '//trim(svn_revision)//', compiled on '//trim(compile_date)// &" >> $(SRCDIR)/code_version.f90
+	@echo "        ' with '//trim(compiler)//' '//trim(compiler_flags)" >> $(SRCDIR)/code_version.f90
 	@echo 'end subroutine print_code_version' >> $(SRCDIR)/code_version.f90
 
 
