@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+    94: AstroFloyd, 14/07/2010
+     - Minor update in Makefile to report program version
+    
     93: AstroFloyd, 14/07/2010
      - Fixed some 'uninitialised variable' compiler warnings
     
